--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -16,10 +16,10 @@
       {% body %}
     </article>
 
-    {{!-- {{midden "view.data"}} --}}
+    {{midden "view.data"}}
     
     <!-- find me in node_modules/midden/dist/js -->
-    {{!-- <script src="/midden-client.js"></script> --}}
+    <script src="/midden-client.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
     <script src="https://unpkg.com/lunr/lunr.js"></script>
     <script src="/js/search-client.js"></script>
