Further built-out example. Updated indexer to include work position data results now includes sample content showing context of search terms included midden in layouts/assemble file Added middleware to add a link attribute to views showing final path to page used this atrtibute in as key indexes and linking results

--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{title}}</title>
-    <!-- find me in node_modules/midden/dist/styles -->
-    {{!-- <link rel="stylesheet" href="/midden.css"> --}}
+    <link rel="stylesheet" href="/css/app.css">
   </head>
   <body>
     <nav>
@@ -16,10 +15,10 @@
       {% body %}
     </article>
 
-    {{midden "view.data"}}
+    {{midden "view"}}
     
     <!-- find me in node_modules/midden/dist/js -->
-    <script src="/midden-client.js"></script>
+    <script src="/js/midden-client.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
     <script src="https://unpkg.com/lunr/lunr.js"></script>
     <script src="/js/search-client.js"></script>
